COmpartir marcador y analitica

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>peroPijoCounter</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Sigue gratis y en tiempo real el marcador de partidos amateur o infantiles y compártelo con padres y familiares, incluso si no están en el campo.">
   <!--<link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/svg+xml" href="assets/icons/scoreboard-svgrepo-com.svg"> -->
   <link rel="icon" type="image/png" href="assets/icons/Icono.png">
